# data-science

./: README.md  project_setup_commands.sh
Archive/: clv_model_before.ipynb
churn-prediction/data/: customer_churn.csv
churn-prediction/notebooks/: churn_model_building.ipynb
churn-prediction/reports/: predicted_churn_risks.csv
churn-prediction/requirements/: Business Requirements Document - Churn.docx
climate-forecasting/requirements/: Business Requirements - Climate Forecasting.docx
clv-prediction/: README.md
clv-prediction/data/: clv_modeling_dataset_large.csv
clv-prediction/notebooks/: clv_model.ipynb  clv_model_with_cv.ipynb  final_clv_model.pkl
clv-prediction/reports/: clv_predictions_with_segments.csv  clv_predictions_with_segments.xlsx
clv-prediction/requirements/: Business Requirements Document - CLV.docx  Business_Requirements_Document.md
conversion-rate-ab-testing/: README.md  data_generator.ipynb  main.py  pyproject.toml
conversion-rate-ab-testing/data/: basic_ab_test.csv
conversion-rate-ab-testing/notebooks/: conversions-rate-ab-testing.ipynb
conversion-rate-ab-testing/requirements/: Business_Requirements_Document_Checkout_AB_Test.docx  conversation-rate-ab-testing_brief.md
daily-market-bot/: .gitignore  .pre-commit-config.yaml  README.md
daily-market-bot/src/: io_local.py  llm.py  metrics.py  run_daily.py
daily-market-service/: README.md  main.py  pyproject.toml
daily-market-service/src/: app.py
notebooks/: prophet_min_temp_forecast.ipynb
project-template/: README.md  SETUP.md
sales-forecasting-by-product/: README.md
(+11 files in other folders)
