[project]
name = "daily-market-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.64.0",
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
